# YOLOv13-RainFog-Detection

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  dump.rdb
backend/: .dockerignore  .env.example  Dockerfile  README.md  manage.py  pyproject.toml
backend/apps/accounts/: apps.py  urls.py  views.py
backend/apps/agent/: analytics_dsl.py  contracts.py  prompts.py  serializers.py  services.py  tools.py  urls.py  views.py
backend/apps/audit/: apps.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/apps/audit/migrations/: 0001_initial.py
backend/apps/dashboard/: apps.py  services.py  urls.py  views.py
backend/apps/detection/: __init__.py  apps.py  explanations.py  models.py  modes.py  serializers.py  services.py  urls.py  views.py
backend/apps/detection/migrations/: 0001_initial.py  0003_add_preprocess_fields.py  (+3 more)
backend/apps/media/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/system/: __init__.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/training/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/common/api/: response.py
backend/common/core/: cache.py  env.py
backend/common/llm/: __init__.py  client.py  types.py
backend/common/types/: __init__.py
backend/common/weather_preprocess/: __init__.py  algorithms.py  dataset.py  pipeline.py  scene_classifier.py  scenes.py
backend/config/: __init__.py  urls.py
backend/config/settings/: base.py  test.py
backend/examples/: call_inference_mcp.py  call_training_mcp.py
backend/inference_service/: main.py
backend/inference_service/adapters/: base.py  mock.py  yolov13.py
backend/inference_service/api/: routes.py
backend/inference_service/core/: __init__.py  config.py
backend/inference_service/schemas/: inference.py
backend/inference_service/services/: inference.py  preprocess_artifact.py  runtime_context.py
backend/integrations/inference/: __init__.py  client.py
backend/mcp_services/: __init__.py
backend/mcp_services/common/: __init__.py  bootstrap.py  errors.py  logging.py  settings.py
backend/mcp_services/inference/: __init__.py  app.py  facade.py  prompts.py  resources.py  schemas.py  server.py  tools.py
backend/mcp_services/training/: __init__.py  app.py  django_bootstrap.py  facade.py  prompts.py  resources.py  schemas.py  server.py  tools.py
backend/tests/: test_agent_qa.py  test_detection_explanations.py  test_detection_modes.py  test_inference_runtime_context.py  test_mcp_inference_server.py  test_mcp_training_server.py  test_preprocess_artifact.py
backend/training/: compare.py  config_utils.py  epoch_watcher.py  infer.py  preprocess_utils.py  split_dataset.py  train.py  training_visualizer.py  validate.py
backend/training/configs/: finetune_best_cosine.yaml  preprocess_auto.yaml  preprocess_manual_rain.yaml
(+126 files in other folders)
